# rename_wheel

./: setup.cfg
src/rename_wheel/: main.py
