[metadata]
name = rename-wheel
home_page = https://github.com/mrmathematica/rename_wheel
version = 0.1
author = mrmathematica
author_email = mrmathematica@yahoo.com
description = Change python wheel package name
keywords = wheel
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    =src
packages = find:
install_requires = wheel==0.40.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rename_wheel = rename_wheel.main:main
